--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	</head>
 	<body>
 		<button id="a">alert弹窗</button>
+		<button id="b">alert弹窗</button>
 		<script src="vendor/require/require.js" data-main = "main"></script>		
 	</body>
 </html>
