--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 	<body>
 		<button id="a">alert弹窗</button>
 		<button id="b">confirm弹窗</button>
+		<button id="c">prompt弹窗</button>
+		<button id="d">common弹窗</button>
 		<script src="vendor/require/require.js" data-main = "main"></script>		
 	</body>
 </html>
